Added logs-table function

--- a/src/index.html
+++ b/src/index.html
@@ -97,19 +97,16 @@
         </table>
       </div>
 
-
       <div class="logTable-Section">
-        <table class="log_table">
-
+        <table id="logTable" class="log_table">
           <tr>
             <th>Amount</th>
             <th>Type</th>
             <th>Date & Time</th>
           </tr>
-
         </table>
-
       </div>
+      <button id="deleteLogs-button" onclick="deleteLogs()">Delete Logs</button>
 
 
     </div>
