--- a/src/about.html
+++ b/src/about.html
@@ -23,13 +23,13 @@
 
       <div class="menu-links">
         <a href="index.html">Home</a>
-        <a href="https://discord.gg/QBpWyfwcc4">Support</a>
+        <a onclick="openExternalLink('https://discord.gg/QBpWyfwcc4')" href="#">Support</a>
         <a href="about.html"  style="text-decoration: underline;">About Finance Manager©</a>
       </div>
     </div>
 
     <div class="about_section">
-      <p id="aboutIntroduction">Finance Manager is a product by <a href="#">Simtec Applications®</a>, developed with Web technology and packed with <a href="https://www.electronjs.org">Electron</a>. <br>The application aims to provide users with a simple yet powerful tool to manage their personal finances offline, ensuring privacy and control over their data.</p>
+      <p id="aboutIntroduction">Finance Manager is a product by <a onclick="openExternalLink('https://simtecapplications.pages.dev/')" href="#">Simtec Applications®</a>, developed with Web technology and packed with <a onclick="openExternalLink('https://www.electronjs.org')" href="#">Electron</a>. <br>The application aims to provide users with a simple yet powerful tool to manage their personal finances offline, ensuring privacy and control over their data.</p>
         <br>
         <div class="privacy-policy_section">
         <h2>Privacy Policy</h2>
@@ -96,7 +96,7 @@
           <br>
           11. Contact Us
           <br>
-          If you have any questions, concerns, or feedback regarding this Privacy Policy or our privacy practices, please contact us via the <a href="https://discord.gg/QBpWyfwcc4">Simtec Applications Discord server</a>.
+          If you have any questions, concerns, or feedback regarding this Privacy Policy or our privacy practices, please contact us via the <a onclick="openExternalLink('https://discord.gg/QBpWyfwcc4')" href="#">Simtec Applications Discord server</a>.
           <br>
           <br>
           By using Finance Manager, you acknowledge that you have read and understood this Privacy Policy. We are committed to protecting your privacy and ensuring that your data remains secure on your device.
@@ -104,7 +104,7 @@
           <br>
           <br>
         </p>
-        <div class="footer">© 2023 - 2024 Simtec Applications</div>
+        <div class="footer"><a style="text-decoration: none;" onclick="openExternalLink('https://simtecapplications.pages.dev/')" href="#"><h5 id="copyrightDate"></h5></a></div>
         </div>
     </div>
 
