--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
       <div class="menu-links">
         <a href="index.html" style="text-decoration: underline">Home</a>
-        <a href="https://discord.gg/QBpWyfwcc4">Support</a>
+        <a onclick="openExternalLink('https://discord.gg/QBpWyfwcc4')" href="#">Support</a>
         <a href="about.html">About Finance Manager©</a>
         <button class="deleteData_button" onclick="deleteData()">
           Delete Data
