updated version to 1.0.1

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <div class="headline_container">
         <img src="img/simtec_logo.png" alt="simtec_logo" />
         <h1> 
-          Finance Manager <label style="font-size: 12px">v 1.0.0 alpha</label>
+          Finance Manager <label style="font-size: 12px">v 1.0.1</label>
         </h1>
       </div>
 
