--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="headline_container">
         <img src="img/simtec_logo.png" alt="simtec_logo" />
-        <h1>Finance Manager <label style="font-size: 12px">v 1.0.0 alpha</label></h1>
+        <h1>Finance Manager <label style="font-size: 12px">v 1.0.1</label></h1>
       </div>
 
       <div class="menu-links">
